--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ window.addEventListener('scroll', function() {
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              CrossFit POA
+              CrossFit NH
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
