Alteração de outro titulo

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ window.addEventListener('scroll', function() {
                       Treinamento
                     </h2>
                     <h1>
-                      CrossFit POA
+                      CrossFit NH
                     </h1>
                     <p>
                       Nosso programa, baseado na metodologia CrossFit combina movimentos funcionais, variabilidade constante e alta intensidade, preparando você para o dia a dia. Venha se juntar à nossa comunidade e descubra como podemos ajudá-lo a alcançar seus objetivos de saúde e bem-estar!
