adiciondo a palavra MAIS no primeiro titulo MAIS SAUDE

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ window.addEventListener('scroll', function() {
                 <div class="detail-box">
                   <div>
                     <h3>
-                      Saúde
+                      Mais Saúde
                     </h3>
                     <h2>
                       Treinamento
