--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ window.addEventListener('scroll', function() {
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              CrossFit NH
+              CrossFit POA
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +95,7 @@ window.addEventListener('scroll', function() {
                       Mais Saúde
                     </h3>
                     <h2>
-                      Treinamento
+                      Treinamento Especializado
                     </h2>
                     <h1>
                       CrossFit NH
@@ -125,7 +125,7 @@ window.addEventListener('scroll', function() {
                       Transformação
                     </h2>
                     <h1>
-                      CrossFit POA
+                      CrossFit NH
                     </h1>
                     <p>
 No CrossFit Porto Alegre, acreditamos que cada pessoa tem um potencial único. Nosso foco é ajudá-lo a descobrir o melhor de si mesmo, independentemente do seu nível de condicionamento. Através de treinos desafiadores e orientados por profissionais qualificados, você evoluirá de forma constante e segura. Pronto para dar o próximo passo na sua jornada fitness?
@@ -152,7 +152,7 @@ No CrossFit Porto Alegre, acreditamos que cada pessoa tem um potencial único. N
                       Conquistando Resultados
                     </h2>
                     <h1>
-                      CrossFit POA
+                      CrossFit NH
                     </h1>
                     <p>
 A verdadeira transformação começa quando você sai da zona de conforto. No CrossFit Porto Alegre, oferecemos treinos que desafiam e motivam, criando um ambiente de apoio para que você ultrapasse seus limites. Com treinos que combinam força, resistência e agilidade, você vai conquistar resultados que vão além do físico. Junte-se a nós e descubra o poder da evolução!
