--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ window.addEventListener('scroll', function() {
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#inicio">INICIO <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#inicio">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link" href="#metodologia"> Metodologia </a>
