Adicionado monitoramento à tag h2 primeira página

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ window.addEventListener('scroll', function() {
                       Saúde
                     </h3>
                     <h2>
-                      Treinamento Especializado
+                      Treinamento e Monitoramento Especializado
                     </h2>
                     <h1>
                       CrossFit POA
