alteravao frase superando limites

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ No CrossFit Porto Alegre, acreditamos que cada pessoa tem um potencial único. N
                 <div class="detail-box">
                   <div>
                     <h3>
-                      Superando Limites
+                      Superando Limites e mais
                     </h3>
                     <h2>
                       Conquistando Resultados
