Adicionado Racional à tag h3 segunda página carrossel

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ window.addEventListener('scroll', function() {
                 <div class="detail-box">
                   <div>
                     <h3>
-                      Evolução
+                      Evolução Racional
                     </h3>
                     <h2>
                       Transformação
